Update environment configuration and dependencies
- Updated PostgreSQL connection settings in .env for local development.
- Upgraded various dependencies in package-lock.json, including @babel/runtime, @eslint packages, and others to their latest versions for improved performance and security.

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-# PostgreSQL Database Connection
-PGHOST=localhost
-PGPORT=5432
+# PostgreSQL Database Connection (Unix Socket for local development)
+PGHOST=
+PGPORT=
 PGDATABASE=coach_platform
 PGUSER=coach
 PGPASSWORD=123@coach
