Add payment gateway configuration and enhance frontend components
- Updated .env file to include Stripe and PayPal configuration for payment processing.
- Added Stripe dependency in package.json and package-lock.json for payment integration.
- Enhanced server.js to include payment routes for handling transactions.
- Improved frontend layout in Index.tsx with new components for search, wellness features, and trust indicators.
- Implemented loading states and authentication checks in various dashboard components.
- Refactored Header component to include theme toggle and navigation links.

--- a/.env
+++ b/.env
@@ -10,4 +10,17 @@ JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 
 # Server Configuration
 PORT=3001
-NODE_ENV=development 
+NODE_ENV=development
+
+# Payment Gateway Configuration
+DEFAULT_PAYMENT_GATEWAY=stripe
+
+# Stripe Configuration (Add your Stripe keys here)
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
+STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key_here
+STRIPE_WEBHOOK_SECRET=whsec_your_stripe_webhook_secret_here
+
+# PayPal Configuration (Optional - Add your PayPal keys here)
+PAYPAL_CLIENT_ID=your_paypal_client_id_here
+PAYPAL_CLIENT_SECRET=your_paypal_client_secret_here
+PAYPAL_ENVIRONMENT=sandbox 
