--- a/frontend/.env
+++ b/frontend/.env
@@ -3,4 +3,7 @@ PGHOST=localhost
 PGPORT=5432
 PGDATABASE=coach_platform
 PGUSER=coach
-PGPASSWORD=123@coach 
+PGPASSWORD=123@coach
+
+# API Configuration
+VITE_API_URL=http://localhost:3001 
