--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["coaching", "mentoring", "api", "nodejs", "express"],
+  "keywords": [
+    "coaching",
+    "mentoring",
+    "api",
+    "nodejs",
+    "express"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -17,9 +23,10 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "stripe": "^18.4.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   }
-} 
+}
